--- a/assets/sass/page/_home-default.scss
+++ b/assets/sass/page/_home-default.scss
@@ -62,6 +62,7 @@
                     font-size: 52px;
                     line-height: 70px
                 }
+
                 @media (max-width:767px) {
                     font-size: 35px;
                     line-height: 50px;
@@ -83,9 +84,10 @@
 // start about
 .wpo-site-about-section {
     background: $white;
+
     @media (max-width:767px) {
         margin-top: 120px;
-        
+
     }
 
     @media (max-width:991px) {
@@ -102,15 +104,18 @@
         @media (max-width:1190px) {
             padding: 85px 18px;
         }
+
         @media (max-width:991px) {
             padding: 85px 100px;
         }
+
         @media (max-width:767px) {
-            padding: 0 40px  80px 40px;
+            padding: 0 40px 80px 40px;
 
         }
+
         @media (max-width:575px) {
-            padding: 0 10px  60px 10px;
+            padding: 0 10px 60px 10px;
 
         }
 
@@ -118,7 +123,7 @@
             padding-right: 50px;
 
             @media (max-width:767px) {
-                padding-right: 0; 
+                padding-right: 0;
             }
 
             img {
@@ -134,7 +139,7 @@
 
             @media (max-width:767px) {
                 text-align: center;
-                
+
             }
 
             h2 {
@@ -145,9 +150,11 @@
                 color: $theme-primary-color-s2;
                 letter-spacing: 0.23em;
                 margin-bottom: 20px;
+
                 @media (max-width:1399px) {
                     margin-bottom: 15px;
                 }
+
                 @media (max-width:991px) {
                     font-size: 24px;
                 }
@@ -172,10 +179,12 @@
                     line-height: 60px;
                     margin-bottom: 15px;
                 }
+
                 @media (max-width:1199px) {
                     font-size: 39px;
                     line-height: 55px;
                 }
+
                 @media (max-width:991px) {
                     font-size: 30px;
                     line-height: 50px;
@@ -199,6 +208,7 @@
                     padding-bottom: 0;
                     line-height: 30px;
                 }
+
                 @media (max-width:767px) {
                     line-height: 20px;
                     font-size: 15px;
@@ -212,7 +222,7 @@
                     font-family: $base-font;
                     font-weight: 400;
                     font-size: 15px;
-                   
+
                 }
             }
 
@@ -702,24 +712,27 @@
         @media (max-width:991px) {
             align-items: center;
         }
-       
 
-        .trusted-item-wrap{
+
+        .trusted-item-wrap {
             height: 132px;
             border: 1px solid$border-color-s4;
             transition: all .4s ease-in-out;
             margin-right: -1px;
             margin-top: -1px;
-            margin-left: -1px;  
+            margin-left: -1px;
             flex-basis: 20%;
-            @media (max-width:991px) {  
-                flex-basis: 33.33%; 
+
+            @media (max-width:991px) {
+                flex-basis: 33.33%;
             }
-            @media (max-width:767px) {   
-                flex-basis: 50%; 
+
+            @media (max-width:767px) {
+                flex-basis: 50%;
             }
-            @media (max-width:500px) {   
-                flex-basis: 100%; 
+
+            @media (max-width:500px) {
+                flex-basis: 100%;
             }
 
 
@@ -728,7 +741,8 @@
                 position: relative;
                 width: 100%;
                 height: 100%;
-                img{
+
+                img {
                     max-width: 40%;
                     margin: 0 auto;
                     object-fit: contain;
@@ -740,13 +754,14 @@
             &:hover {
                 border: 1px solid$theme-primary-color-s2;
                 background: $white;
-                img{
+
+                img {
                     filter: grayscale(0);
                 }
-               
+
             }
         }
-       
+
     }
 }
 
@@ -914,20 +929,47 @@
             }
 
         }
+
+        .portfolio-slider {
+            .slick-dots {
+                bottom: -60px;
+            }
+
+            .slick-dots li button {
+                border-radius: 50px;
+                width: 12px;
+                height: 12px;
+                background: $border-color-s2;
+                outline: none;
+            }
+
+            .slick-dots li button:before {
+                font-size: 0;
+                width: 12px;
+                height: 12px;
+                border-radius: 50px;
+                background: $white;
+            }
+
+        }
+
     }
 }
 
 // start testimonial
 .wpo-site-testimonial-section {
     background: $white;
-    .wpo-section-title{
-        h2{
+
+    .wpo-section-title {
+        h2 {
             @media (max-width:1390px) {
                 font-size: 50px;
             }
+
             @media (max-width:1199px) {
                 font-size: 40px;
             }
+
             @media (max-width:436px) {
                 font-size: 28px;
             }
