--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -18,17 +18,18 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        opacity: .8;
+        opacity: .95;
     }
 
     ul {
         list-style: none;
     }
 
-    p{
+    p {
         color: $white;
     }
-    li{
+
+    li {
         color: $white;
     }
 
@@ -36,54 +37,54 @@
         position: relative;
     }
 
-    .wpo-upper-footer{
-        padding: 70px 0;
+    .wpo-upper-footer {
+        padding: 140px 0;
     }
 
     @media (max-width: 991px) {
 
-        .wpo-upper-footer{
+        .wpo-upper-footer {
             padding: 50px 0 0;
         }
     }
-    
+
     @media (max-width: 767px) {
-    
-        .wpo-upper-footer{
+
+        .wpo-upper-footer {
             padding: 60px 0 0;
         }
     }
-    
+
     @media (max-width: 991px) {
-    
-        .wpo-upper-footer .col{
+
+        .wpo-upper-footer .col {
             min-height: 235px;
             margin-bottom: 70px;
         }
     }
-    
+
     @media (max-width: 767px) {
-    
-        .wpo-upper-footer .col{
+
+        .wpo-upper-footer .col {
             min-height: auto;
             margin-bottom: 60px;
         }
     }
 
-    .widget-title{
+    .widget-title {
         margin-bottom: 30px;
     }
 
     @media (max-width: 767px) {
 
-        .widget-title{
+        .widget-title {
             margin-bottom: 20px;
         }
     }
 
 
-    .widget-title{
-        h3{
+    .widget-title {
+        h3 {
             font-size: 30px;
             color: $white;
             margin: 0;
@@ -92,7 +93,7 @@
             font-weight: 400;
         }
     }
-    
+
     .about-widget {
         .logo {
             max-width: 180px;
@@ -100,31 +101,35 @@
     }
 
     .about-widget {
-        p{
+        p {
             margin-bottom: 0.8em;
             line-height: 1.9em;
 
-            &:last-child{
+            &:last-child {
                 margin-bottom: 0;
             }
         }
-        .f-mail{
-            
-            .mail{
+
+        .f-mail {
+
+            .mail {
                 margin-top: 24px;
                 width: 100%;
-                padding: 20px 24px;
+                padding: 19px 24px;
                 font-family: $base-font;
                 font-size: 16px;
                 font-weight: 400;
                 color: $light;
                 background: #322A1E;
                 border: 1px solid rgba(255, 255, 255, 0.07);
-                &:focus-visible{
+                line-height: 19px;
+
+                &:focus-visible {
                     outline: none;
                 }
             }
-            .theme-btn-s2{
+
+            .theme-btn-s2 {
                 font-weight: 500;
                 line-height: 18px;
                 letter-spacing: 0.18em;
@@ -136,142 +141,149 @@
             }
         }
     }
-    .wpo-service-link-widget{
+
+    .wpo-service-link-widget {
         padding-left: 70px;
     }
-        
+
     .link-widget {
         overflow: hidden;
-        
+
 
         @media screen and (min-width: 1200px) {
             padding-left: 75px;
         }
-        
+
         @media (max-width: 1199px) {
             padding-left: 20px;
         }
-        
+
         @media (max-width: 991px) {
             padding-left: 0;
         }
-        
+
         @media (max-width: 767px) {
             max-width: 350px;
         }
 
-        ul{
-            li{
-                position: relative;
-                a{
-                    color: $light;
-                    font-size: 15px;
+        ul {
+            padding-top: 24px;
 
-                    &:hover{
+            li {
+
+                position: relative;
+
+                a {
+                    color: $light;
+                    font-size: 16px;
+                    font-family: $base-font;
+                    font-weight: 400;
+
+                    &:hover {
                         color: $theme-primary-color;
                     }
                 }
             }
-            li+li{
-              padding-top: 15px;
+
+            li+li {
+                padding-top: 18px;
             }
         }
     }
 
-    .tag-widget{
-        ul{
+    .tag-widget {
+        ul {
             display: flex;
             flex-wrap: wrap;
-            li{
-                a{
-                  display: block;
-                  padding:8px 20px;
-                  background: rgba(255,255,255,.1);
-                  font-size: 16px;
-                  color: $white;
-                  margin-right: 10px;
-                  margin-bottom: 10px;
-                  border-radius: 5px;
-                }
-            }
-        }
-    }
 
-.social-widget{
-    ul{
-        li{
-            a{
-                display: block;
-                font-size: 16px;
-                font-weight: 600;
-                color: $white;
-                margin-bottom: 10px;
-                &:hover{
-                    color: $theme-primary-color;
-                }
-
-                i{
+            li {
+                a {
+                    display: block;
+                    padding: 8px 20px;
+                    background: rgba(255, 255, 255, .1);
+                    font-size: 16px;
+                    color: $white;
                     margin-right: 10px;
+                    margin-bottom: 10px;
+                    border-radius: 5px;
                 }
             }
         }
     }
-}
-    
 
-    .wpo-lower-footer{
+    .social-widget {
+        ul {
+            li {
+                a {
+                    display: block;
+                    font-size: 16px;
+                    font-weight: 600;
+                    color: $white;
+                    margin-bottom: 10px;
+
+                    &:hover {
+                        color: $theme-primary-color;
+                    }
+
+                    i {
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    }
+
+
+    .wpo-lower-footer {
         text-align: center;
         position: relative;
-        background: $black;
-    
-        .row{
+        background: $small-black;
+
+        .row {
             padding: 20px 0;
             position: relative;
         }
-    
-        .copyright{
+
+        .copyright {
             display: inline-block;
-            font-size: 15px;
             font-size: 0.9375rem;
             margin: 0;
-            color: $light;
+            color: $cyan;
+            font-family: $base-font;
+            font-weight: 400;
+            font-size: 16px;
 
-    
-            a{
+            letter-spacing: 0.18em;
+
+            a {
                 color: $white;
                 text-decoration: none;
             }
-    
+
             @media (max-width: 991px) {
                 float: none;
                 display: block;
             }
         }
     }
-    
-    .instagram{
-        ul{
+
+    .instagram {
+        ul {
             display: flex;
             flex-wrap: wrap;
             margin: 0px -3px;
-    
-            li{
+
+            li {
                 -ms-flex: 0 0 33.33%;
                 flex: 0 0 33.33%;
                 max-width: 33.33%;
                 margin-bottom: 5px;
                 padding: 0px 3px;
-    
-                img{
+
+                img {
                     width: 100%;
                 }
             }
         }
     }
 }
-
-
-
-
-
-
