--- a/assets/sass/page/_home-default.scss
+++ b/assets/sass/page/_home-default.scss
@@ -130,7 +130,7 @@
         .about-left {
             padding-right: 50px;
 
-            @media (max-width:767px) {
+            @media (max-width:991px) {
                 padding-right: 0;
             }
 
@@ -142,7 +142,7 @@
 
         .about-text {
             @media (max-width:991px) {
-                margin-bottom: 40px;
+                margin-bottom: 50px;
             }
 
             @media (max-width:767px) {
@@ -271,7 +271,7 @@
 
             @media (max-width:991px) {
                 margin-bottom: 30px;
-                padding: 30px 50px;
+                padding: 30px;
             }
 
             @media (max-width:575px) {
@@ -531,10 +531,14 @@
 // start team
 .wpo-site-team-section {
     background: $white;
-    padding-bottom: 80px;
+    padding-bottom: 90px;
 
-    @media (max-width:575px) {
-        padding-bottom: 60px;
+    @media (max-width:991px) {
+        padding-bottom: 40px;
+    }
+
+    @media (max-width:767px) {
+        padding-bottom: 30px;
     }
 
     .team-wrap {
@@ -899,6 +903,7 @@
                 margin-top: -28px;
                 margin-bottom: 28px;
             }
+
             @media (max-width:575px) {
                 margin-top: -24px;
                 margin-bottom: 24px;
@@ -916,6 +921,7 @@
 
         .portfolio-item {
             padding: 30px;
+            position: relative;
             text-align: center;
             border: 1px solid $grin;
             transition: all .4s ease-in-out;
@@ -932,77 +938,120 @@
                 border-top: 1px solid $white;
 
                 .portfolio-img {
-                    .portfolio-text {
-                        opacity: 1;
-                        visibility: visible;
-                        transform: scale(100%);
+                    &::before {
+                        opacity: 0.6;
                     }
                 }
+
+                .portfolio-text {
+                    opacity: 1;
+                }
+
 
             }
 
             .portfolio-img {
                 position: relative;
-                z-index: 1;
+                z-index: -1;
+                width: 100%;
+
+                &::before {
+                    position: absolute;
+                    content: '';
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    transition: all .4s ease-in-out;
+                    background: $black;
+                    opacity: 0;
+                }
 
                 img {
                     width: 100%;
                 }
 
-                .portfolio-text {
-                    position: absolute;
+
+            }
+
+            .portfolio-text {
+                position: absolute;
+                left: 40px;
+                top: 170px;
+                transform: translate(10px, 10px);
+                z-index: 1;
+                transition: all .4s ease-in-out;
+                opacity: 0;
+
+
+
+                @media (max-width:1399px) {
+                    left: 20px;
+                    top: 120px;
+                }
+
+                @media (max-width:1199px) {
+                    left: 10px;
+                }
+
+                @media (max-width:991px) {
+                    left: 18px;
+                }
+
+                @media (max-width:767px) {
                     left: 0;
-                    top: 0;
-                    width: 100%;
-                    height: 100%;
-                    z-index: 1;
-                    padding: 180px 0;
-                    transition: all .4s ease-in-out;
-                    opacity: 0;
-                    visibility: hidden;
-                    transform: scale(0);
+                    top: 90px;
 
-                    @media (max-width:1199px) {
-                        padding: 100px 0;
-                    }
-                    @media (max-width:4790px) {
-                        padding: 200px 0;
-                    }
-                    @media (max-width:400px) {
-                        padding: 150px 0;
-                    }
+                }
 
-                    &::before {
-                        position: absolute;
-                        content: '';
-                        background: $black;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        z-index: -1;
-                        opacity: .6;
-                        transition: all .4s ease-in-out;
-                    }
+                @media (max-width:574px) {
+                    left: 108px;
+                    top: 280px;
+                }
 
-                    h3 {
-                        a {
-                            font-family: $heading-font;
-                            font-size: 24px;
-                            font-weight: 400;
-                            line-height: 30px;
-                            color: $white;
+                @media (max-width:500px) {
+                    left: 78px;
+                    top: 165px;
+                }
+
+                @media (max-width:400px) {
+                    left: 64px;
+                    top: 165px;
+                }
+
+                @media (max-width:350px) {
+                    left: 27px;
+                    top: 122px;
+                }
+
+
+                h3 {
+                    a {
+                        font-family: $heading-font;
+                        font-size: 24px;
+                        font-weight: 400;
+                        line-height: 30px;
+                        color: $white;
+
+                        @media (max-width:1199px) {
+                            font-size: 20px;
+                            line-height: 28px;
+                        }
+
+                        @media (max-width:767px) {
+                            font-size: 18px;
+                            line-height: 25px;
                         }
                     }
+                }
 
-                    span {
-                        font-family: $base-font;
-                        font-size: 17px;
-                        font-weight: 400;
-                        line-height: 18px;
-                        color: $theme-primary-color-s2;
-                        padding-top: 2px;
-                    }
+                span {
+                    font-family: $base-font;
+                    font-size: 17px;
+                    font-weight: 400;
+                    line-height: 18px;
+                    color: $theme-primary-color-s2;
+                    padding-top: 2px;
                 }
             }
 
@@ -1098,7 +1147,7 @@
                                 filter: grayscale(100%);
                             }
 
-                            &::before  {
+                            &::before {
                                 opacity: .6;
                                 visibility: visible;
                             }
@@ -1116,6 +1165,7 @@
                         position: relative;
                         height: 100%;
                         flex-basis: 20%;
+
                         &::before {
                             position: absolute;
                             content: '';
@@ -1128,21 +1178,24 @@
                             z-index: 1;
                             transition: all .4s ease-in-out;
                         }
+
                         @media (max-width:1199px) {
                             flex-basis: 25%;
                         }
+
                         @media (max-width:991px) {
                             flex-basis: 40%;
                         }
+
                         @media (max-width:767px) {
                             flex-basis: 50%;
                         }
-                        
-                       
-                        
 
 
-                       
+
+
+
+
 
                         img {
                             width: 100%;
@@ -1158,6 +1211,7 @@
                         @media (max-width:1199px) {
                             padding-left: 15px;
                         }
+
                         @media (max-width:767px) {
                             padding-left: 10px;
                         }
@@ -1179,10 +1233,12 @@
                                 font-size: 21px;
                                 line-height: 35px;
                             }
+
                             @media (max-width:991px) {
                                 font-size: 20px;
                                 line-height: 28px;
                             }
+
                             @media (max-width:767px) {
                                 font-size: 18px;
                                 line-height: 28px;
